--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "pages": [
+    "pages/serveOrder/serveOrder",
     "pages/home/home",
     "pages/order/order",
-    "pages/mine/mine",
-    "pages/serveOrder/serveOrder"
+    "pages/mine/mine"
   ],
   "window": {
     "backgroundTextStyle": "light",
